--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -3,14 +3,14 @@ extends layout/main.pug
 
 include ../blocks/sContent/_sContent.pug
 include ../blocks/sContact/_sContact.pug
-include ../blocks/sCategories/_sCategories.pug
-include ../blocks/sYouNeedUs/_sYouNeedUs.pug
-include ../blocks/sTeam/_sTeam.pug
-include ../blocks/sAccess/_sAccess.pug
-include ../blocks/sQuestions/_sQuestions.pug
-include ../blocks/sReviews/_sReviews.pug
-include ../blocks/sCardHorisontal/_sCardHorisontal.pug
-include ../blocks/footer-main/_footer-main.pug
+//- include ../blocks/sCategories/_sCategories.pug
+//- include ../blocks/sYouNeedUs/_sYouNeedUs.pug
+//- include ../blocks/sTeam/_sTeam.pug
+//- include ../blocks/sAccess/_sAccess.pug
+//- include ../blocks/sQuestions/_sQuestions.pug
+//- include ../blocks/sReviews/_sReviews.pug
+//- include ../blocks/sCardHorisontal/_sCardHorisontal.pug
+//- include ../blocks/footer-main/_footer-main.pug
 
 block variables
 	- let  mainPage= null 
