--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -15,27 +15,43 @@ block pagecontent
 	//- +mob-mnu()
 	+header()
 	+top-nav()
-	
+
 	+topLine()
 	.container
-		p 1
 		.row
-			.col-4
-				img.res-i(src="img/@2x/webp/servise-bg.webp", alt="")
-			.col-4
-				img.res-i(src="img/@2x/avif/servise-bg.avif", alt="")
-			.col-4
-				img.res-i(src="img/@2x/servise-bg.jpg", alt="")
-		+pic("servise-bg.jpg")
-		.swiper-wrapper
-			.swiper-slide 1
-			.swiper-slide 2
-			.swiper-slide 3
+
+			.col-auto
+				.btn.btn-primary.btn-lg(href="#") Отправить
+			.col-auto
+				.btn.btn-primary(href="#") Отправить
+			.col-auto
+				.btn.btn-outline-primary(href="#") Отправить
+			.col-auto
+				.btn.btn-primary.btn-sm(href="#") Отправить
+			.col-auto
+				.btn.btn-secondary.btn-sm(href="#") Отправить
+			.col-auto
+				.btn.btn-outline-secondary.btn-sm(href="#") Отправить
+			.col-auto
+				.btn.btn-info.btn-lg(href="#") Отправить
+
+		h1 Lorem ipsum dolor sit amet consectetur.
+		h2 Lorem ipsum dolor sit amet consectetur.
+		h3 Lorem ipsum dolor sit amet consectetur.
+		h4 Lorem ipsum dolor sit amet consectetur.
+		h5 Lorem ipsum dolor sit amet consectetur.
+		h6 Lorem ipsum dolor sit amet consectetur.
+		p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quam harum maxime perferendis magnam quis. Laudantium, ea error rerum deserunt asperiores unde nemo dolores a reiciendis quidem non ad tempora.
+		.row
+			.col-6
+				p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestiae veritatis mollitia ipsum veniam, quos ut libero ducimus optio ullam laboriosam iste corporis odit, consectetur tenetur ipsa placeat quae aliquid.
+			.col-6
+				p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestiae veritatis mollitia ipsum veniam, quos ut libero ducimus optio ullam laboriosam iste corporis odit, consectetur tenetur ipsa placeat quae aliquid.
 	+headerBlock()
 	+sForm()
 	+sContact()
 	+footer()
-      
+
 
 
 
