--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -115,6 +115,13 @@ body {
 	padding-top: var(--sPT);
 	padding-bottom: var(--sPB);
 }
+.section-wrapper {
+	max-width: 1392px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 32px;
+	background-color: $light;
+}
 
 .section-title {
 	margin-bottom: var(--sTPB);
@@ -461,6 +468,23 @@ iframe {
 
 .btn-primary {
 	color: $secondary;
+	&.with-shadow {
+		position: relative;
+		border: 1px solid transparent;
+		background-clip: padding-box;
+		box-shadow: 0px 4px 0px #e2a826, 0px 10px 13px rgba(0, 0, 0, 0.09) !important;
+		&::after {
+			content: "";
+			position: absolute;
+			background-image: linear-gradient(180deg, #ffc136 0%, #ffda88 100%);
+			top: -1px;
+			bottom: -1px;
+			left: -1px;
+			right: -1px;
+			z-index: -1;
+			border-radius: 1000px;
+		}
+	}
 }
 .btn-lg {
 	font-weight: 700;
