--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -116,7 +116,6 @@ $theme-colors: (
 // scss-docs-end theme-colors-map
 
 $theme-colors: map-remove($theme-colors, 
-"light", 
 "dark",  
 "success",
 'warning', 
@@ -277,7 +276,7 @@ $container-max-widths: (sm: 540px,
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1320px) !default;
+  xxl: 1248px) !default;
 // scss-docs-end container-max-widths
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
@@ -314,9 +313,9 @@ $border-color: $gray-300 !default;
 // scss-docs-end border-variables
 
 // scss-docs-start border-radius-variables
-$border-radius: .25rem !default;
+$border-radius: rem(8) !default;
 $border-radius-sm: .2rem !default;
-$border-radius-lg: .3rem !default;
+$border-radius-lg: rem(16) !default;
 $border-radius-pill: 50rem !default;
 // scss-docs-end border-radius-variables
 
@@ -637,12 +636,12 @@ $form-label-color: null !default;
 // scss-docs-end form-label-variables
 
 // scss-docs-start form-input-variables
-$input-padding-y: $input-btn-padding-y !default;
-$input-padding-x: $input-btn-padding-x !default;
+$input-padding-y: rem(16) !default;
+$input-padding-x: rem(16) !default;
 $input-font-family: $input-btn-font-family !default;
-$input-font-size: $input-btn-font-size !default;
+$input-font-size: rem(12) !default;
 $input-font-weight: $font-weight-base !default;
-$input-line-height: $input-btn-line-height !default;
+$input-line-height: 1.35 !default;
 
 $input-padding-y-sm: $input-btn-padding-y-sm !default;
 $input-padding-x-sm: $input-btn-padding-x-sm !default;
@@ -657,7 +656,7 @@ $input-disabled-bg: $gray-200 !default;
 $input-disabled-border-color: null !default;
 
 $input-color: $body-color !default;
-$input-border-color: $gray-400 !default;
+$input-border-color: transparent !default;
 $input-border-width: $input-btn-border-width !default;
 $input-box-shadow: $box-shadow-inset !default;
 
@@ -671,7 +670,7 @@ $input-focus-color: $input-color !default;
 $input-focus-width: $input-btn-focus-width !default;
 $input-focus-box-shadow: $input-btn-focus-box-shadow !default;
 
-$input-placeholder-color: $gray-600 !default;
+$input-placeholder-color: rgba($color: $body-color, $alpha: 0.5) !default;
 $input-plaintext-color: $body-color !default;
 
 $input-height-border: $input-border-width * 2 !default;
