--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -45,7 +45,8 @@ block pagecontent
 		+sAdvantages()
 		+sQuestions()
 		+sCertificates()
-		+sWeProduce()
+		//- +sWeProduce()
+		+sCatalogProd()
 	+sContact()
 	.section-wrapper
 		+footer()
