--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -39,6 +39,11 @@
 			width: 33.33333333% !important;
 		}
 	}
+	// .catalogItem {
+	// 	max-width: rem(336);
+	// 	margin-left: auto;
+	// 	margin-right: auto;
+	// }
 
 	&--prod {
 		--sPT: #{rem(26)};
@@ -49,6 +54,9 @@
 			--sPB: #{rem(98)};
 			--sTPB: #{rem(72)};
 		}
+		h2 {
+			@extend .h3;
+		}
 		.sCatalog__slide {
 			@include media-breakpoint-up(lg) {
 				flex: 0 0 auto !important;
@@ -57,6 +65,7 @@
 		}
 		.catalogItem {
 			picture {
+				border: none;
 				@include media-breakpoint-up(lg) {
 					--ratio: 270/280;
 				}
