--- a/sourse/pug/blocks/sCertificates/_sCertificates.scss
+++ b/sourse/pug/blocks/sCertificates/_sCertificates.scss
@@ -36,6 +36,7 @@
 		margin-right: auto;
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		border-radius: $border-radius-lg;
+		cursor: pointer;
 		picture {
 			@include block(230, 328);
 			img {
