--- a/sourse/pug/blocks/sAbout/_sAbout.pug
+++ b/sourse/pug/blocks/sAbout/_sAbout.pug
@@ -19,4 +19,7 @@ mixin sAbout(data)
 						+sAboutSlide(1, `Сборочный цех`)
 						+sAboutSlide(1, `Сварочный цех`)
 						+sAboutSlide(1, `Сборочный цех`)
+			+e.footer
+				p Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и 3D&minus;макет навеса мы&nbsp;делаем бесплатно.
+				+e.btn(href="#") Записаться на&nbsp;экскурсию по&nbsp;производству
 	// end sAbout
