--- a/sourse/pug/blocks/sAbout/_sAbout.scss
+++ b/sourse/pug/blocks/sAbout/_sAbout.scss
@@ -15,6 +15,10 @@
 	}
 	&__slider-wrapper {
 		position: relative;
+		margin-bottom: rem(22);
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(50);
+		}
 	}
 	&__slider {
 		max-width: rem(1008);
@@ -72,6 +76,30 @@
 		}
 	}
 
+	&__footer {
+		text-align: center;
+		p {
+			font-weight: 500;
+			font-size: rem(16);
+			line-height: 150%;
+			color: rgba($color: #000000, $alpha: 0.7);
+			margin-bottom: rem(22);
+			@include media-breakpoint-up(md) {
+				font-size: rem(18);
+				margin-bottom: rem(40);
+			}
+		}
+	}
+	&__btn {
+		@extend .btn, .btn-outline-secondary;
+		width: rem(450);
+		max-width: 100%;
+		line-height: 145%;
+		padding: rem(7.5) rem(30);
+		&:focus, &:focus:active {
+			box-shadow: none;
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
