--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -13,7 +13,7 @@ include ../blocks/sReviews/_sReviews.pug
 include ../blocks/sStages/_sStages.pug
 include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sAdvantages/_sAdvantages.pug
-include ../blocks/sQuestions/_sQuestions.pug
+include ../blocks/sAccordion/_sAccordion.pug
 include ../blocks/sCertificates/_sCertificates.pug
 
 block variables
@@ -42,7 +42,7 @@ block pagecontent
 	.section-wrapper
 		+sAbout()
 		+sAdvantages()
-		+sQuestions()
+		+sAccordion()
 		+sCertificates()
 		+sCatalogProd()
 	+sContact()
