--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -478,6 +478,76 @@ iframe {
 	// @include row-sw(10px, sm, 100px);
 }
 
+.accordion-item {
+	--imgS: #{rem(80)};
+	border: 1px solid #f4f4f4;
+	// margin-left: auto;
+	// margin-right: auto;
+	// max-width: rem(640);
+	margin-bottom: 10px;
+	overflow: hidden;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	&__head {
+		position: relative;
+		cursor: pointer;
+		padding: rem(7) 0 rem(7) rem(30);
+		@include media-breakpoint-up(md) {
+			padding: rem(20) 0 rem(20) rem(36);
+		}
+		h4 {
+			margin-bottom: 0;
+			line-height: 130%;
+			@include media-breakpoint-down(sm) {
+				font-size: rem(18);
+			}
+		}
+		.icon {
+			@include mt(0.2s);
+			position: absolute;
+			font-size: rem(16);
+			fill: none;
+			stroke: $warning;
+			stroke-width: 3px;
+			top: rem(8);
+			left: rem(3);
+			@include media-breakpoint-up(sm) {
+				top: rem(12);
+			}
+			@include media-breakpoint-up(md) {
+				top: rem(24);
+			}
+			@include media-breakpoint-up(xl) {
+				top: rem(27);
+			}
+		}
+		&.active {
+			.icon {
+				transform: rotate(90deg);
+			}
+		}
+	}
+	&__content {
+		display: none;
+		max-width: rem(1000);
+		font-weight: 500;
+		font-size: rem(16);
+		line-height: 150%;
+		color: rgba($color: #000000, $alpha: 0.7);
+		padding-top: rem(10);
+		@include media-breakpoint-up(xl) {
+			padding-top: rem(15);
+			font-size: rem(18);
+		}
+		p {
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
 .btn-primary {
 	color: $secondary;
 	&.with-shadow {
