--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -35,6 +35,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-person {
+	font-size:math.div(25,10)*1rem;
+	width: math.div(25,25)*1em;
+}
 .icon-telegram {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
