--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,6 +39,10 @@
 	font-size:math.div(25,10)*1rem;
 	width: math.div(25,25)*1em;
 }
+.icon-positive {
+	font-size:math.div(18,10)*1rem;
+	width: math.div(18,18)*1em;
+}
 .icon-sStages-arrow {
 	font-size:math.div(57,10)*1rem;
 	width: math.div(258,57)*1em;
