--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -1,10 +1,38 @@
 mixin headerBlock()
 	// start headerBlock
-	+b.headerBlock.section#headerBlock&attributes(attributes)
+	+b.headerBlock.section.bg-wrap#headerBlock&attributes(attributes)
+		+pic(`headerBlock-bg.png`, `bg`, 0).picture-bg
 		.container
-			+b.section-title.text-center
-				h1 Изготовление и&nbsp;установка навесов под ключ в&nbsp;Москве и&nbsp;МО
-
 			.row
-						
+				+e.col.col
+					+b.section-title
+						h1 Изготовление и&nbsp;установка навесов под ключ в&nbsp;Москве и&nbsp;МО
+					+e.time.d-none.d-lg-flex
+						span Изготовление 14&ndash;30 дней
+						span &bull;
+						span Установка 1&ndash;2 дня
+					+e.btn(href="#") Вызвать замерщика
+					p Выезжаем в&nbsp;удобный для вас день и&nbsp;время
+				.col-lg-auto
+					+form-wrap
+						h4 Расчет цены за&nbsp;5&nbsp;минут
+						+e.subtitle Заполните форму&nbsp;&mdash; мы&nbsp;сразу перезвоним
+						p Укажите габариты навеса 
+						.row
+							.col-6
+								+input(`Ширина`, `text`)
+							.col-6
+								+input(`Длина`, `text`)
+							.col-12
+								+input(`Ваш номер телефона +7 ___ ___ - __ - __`, `tel`)
+							.col-12
+								+e.btn(href="#") Получить расчет
+						ul
+							li
+								+icon('positive')
+								span Коммерческое предложение <br> с&nbsp;перечнем работ и&nbsp;материалов
+							li
+								+icon('positive')
+								span Бесплатный выезд инженера на&nbsp;ваш участок
+						+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#") персональных&nbsp;данных]
 	// end headerBlock
