--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -14,7 +14,7 @@ mixin headerBlock()
 					+e.btn(href="#") Вызвать замерщика
 					p Выезжаем в&nbsp;удобный для вас день и&nbsp;время
 				.col-lg-auto
-					+form-wrap
+					+form-wrap.blurred-block
 						h4 Расчет цены за&nbsp;5&nbsp;минут
 						+e.subtitle Заполните форму&nbsp;&mdash; мы&nbsp;сразу перезвоним
 						p Укажите габариты навеса 
@@ -35,4 +35,22 @@ mixin headerBlock()
 								+icon('positive')
 								span Бесплатный выезд инженера на&nbsp;ваш участок
 						+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#") персональных&nbsp;данных]
+			+e.cards
+				.row
+					.col-lg-4
+						+e.item.blurred-block
+							+e.icon-wrap
+								+icon('headerBlock-1')
+							p Выдерживают нагрузку 300&nbsp;кг/м2&nbsp;&mdash; это почти вдвое прочнее рекомендуемых нормативов в&nbsp;Москве и&nbsp;МО (180&nbsp;кг/м2)
+					.col-lg-4
+						+e.item.bg-white
+							+e.icon-wrap
+								+icon('headerBlock-2')
+							p Официальный договор, гарантия 12&nbsp;месяцев, оплата наличными, картой или&nbsp;на&nbsp;счет
+					.col-lg-4
+						+e.item.blurred-block
+							+e.icon-wrap
+								+icon('headerBlock-3')
+							p Финальная уборка после работы&nbsp;&mdash; не&nbsp;оставим после себя мусор
+				
 	// end headerBlock
