--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -31,6 +31,18 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-headerBlock-1 {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(32,32)*1em;
+}
+.icon-headerBlock-2 {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(33,32)*1em;
+}
+.icon-headerBlock-3 {
+	font-size:math.div(32,10)*1rem;
+	width: math.div(33,32)*1em;
+}
 .icon-instagram {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
