--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -1,8 +1,8 @@
 // start .headerBlock
 .headerBlock {
 	margin-bottom: 1px;
-	min-height: 100vh;
-	min-height: calc(var(--vh, 1vh) * 100);
+	// min-height: 100vh;
+	// min-height: calc(var(--vh, 1vh) * 100);
 	// background-image: url(../img);
 	// background-color: #000000;
 	color: $white;
@@ -20,6 +20,7 @@
 		--sTPB: #{rem(47)};
 	}
 	picture {
+		z-index: -3;
 		&::after {
 			content: "";
 			position: absolute;
@@ -90,37 +91,77 @@
 		@extend .btn, .btn-lg, .btn-primary, .with-shadow;
 		display: none;
 		margin-bottom: rem(30);
+		width: rem(241);
+		max-width: 100%;
 		@include media-breakpoint-up(lg) {
 			display: inline-block;
 		}
 	}
+	&__cards {
+		margin-top: rem(80);
+		.row {
+			--bs-gutter-x: #{rem(24)};
+			@include media-breakpoint-up(xxl) {
+				--bs-gutter-x: #{rem(32)};
+			}
+		}
+	}
+	&__item {
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		align-items: flex-start;
+		height: 100%;
+		padding: 0 rem(25) rem(25) rem(25);
+		border-radius: 16px;
+		&.bg-white {
+			p {
+				color: $body-color;
+			}
+		}
+		p {
+			font-weight: 500;
+			font-size: rem(14);
+			line-height: 150%;
+			color: $white;
+			flex-grow: 1;
+			margin-bottom: 0;
+		}
+	}
+	&__icon-wrap {
+		position: relative;
+		display: inline-block;
+		padding: rem(16);
+		background-color: $primary;
+		margin-top: rem(-8);
+		margin-bottom: rem(24);
+		border-radius: 0 0 14px 14px;
+		&::after {
+			content: "";
+			position: absolute;
+			left: calc(100% - 5px);
+			top: 0;
+			width: rem(8);
+			height: rem(8);
+			transform: skewX(35deg);
+			background-color: #c79528;
+			z-index: -1;
+		}
+		.icon {
+			font-size: rem(32);
+			color: $secondary;
+		}
+	}
 	.form-wrap {
 		padding: rem(16) rem(16) rem(22);
-		position: relative;
-		border: 1px solid transparent;
-		background-clip: padding-box;
-		box-shadow: 10px 18px 19px rgba(0, 0, 0, 0.32);
 		border-radius: 16px;
-		backdrop-filter: blur(18px);
-		background-color: rgba($color: $body-color, $alpha: 0.2);
-
 		@include media-breakpoint-up(sm) {
 			padding: rem(16) rem(24) rem(32);
 		}
 		@include media-breakpoint-up(lg) {
 			max-width: rem(385);
 		}
-		&::after {
-			content: "";
-			position: absolute;
-			background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
-			top: -1px;
-			bottom: -1px;
-			left: -1px;
-			right: -1px;
-			z-index: -1;
-			border-radius: 16px;
-		}
+
 		p {
 			font-weight: 600;
 			font-size: rem(12);
@@ -258,3 +299,22 @@
 }
 
 // end.headerBlock
+
+.blurred-block {
+	position: relative;
+	border-radius: 16px;
+	&::after {
+		content: "";
+		border: 1px solid rgba($color: $white, $alpha: 0.15);
+		background-color: rgba($color: $white, $alpha: 0.2);
+		backdrop-filter: blur(18px);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -2;
+		border-radius: 16px;
+		box-shadow: 10px 18px 19px 0px #00000052;
+	}
+}
