edit headerBlock & sReviews

--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -43,7 +43,7 @@ mixin headerBlock()
 								+icon('headerBlock-1')
 							p Выдерживают нагрузку 300&nbsp;кг/м2&nbsp;&mdash; это почти вдвое прочнее рекомендуемых нормативов в&nbsp;Москве и&nbsp;МО (180&nbsp;кг/м2)
 					.col-lg-4
-						+e.item.bg-white
+						+e.item.white-bg
 							+e.icon-wrap
 								+icon('headerBlock-2')
 							p Официальный договор, гарантия 12&nbsp;месяцев, оплата наличными, картой или&nbsp;на&nbsp;счет
