--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -1,6 +1,7 @@
 mixin allcss() 
 	link(href="libs/swiper/swiper.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
+	link(href="libs/plyr/plyr.css", rel="stylesheet")
 	link(href="css/main.min.css", rel="stylesheet")
 
 mixin allcjs() 
@@ -8,4 +9,5 @@ mixin allcjs()
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
 	script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
+	script(src="libs/plyr/plyr.min.js") 
 	script(src="js/common.js")
