--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -30,6 +30,7 @@
 			height: 100%;
 			background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 77.62%);
 		}
+		
 	}
 	&__col {
 		display: flex;
@@ -98,9 +99,16 @@
 		}
 	}
 	&__cards {
+		margin-top: rem(32);
+		@include media-breakpoint-up(lg) {
+		margin-top: rem(60);
+		}
+		@include media-breakpoint-up(xxl) {
 		margin-top: rem(80);
+		}
 		.row {
 			--bs-gutter-x: #{rem(24)};
+			--bs-gutter-y: #{rem(20)};
 			@include media-breakpoint-up(xxl) {
 				--bs-gutter-x: #{rem(32)};
 			}
@@ -108,15 +116,30 @@
 	}
 	&__item {
 		display: flex;
-		flex-direction: column;
 		position: relative;
 		align-items: flex-start;
 		height: 100%;
-		padding: 0 rem(25) rem(25) rem(25);
 		border-radius: 16px;
-		&.bg-white {
+		max-width: rem(400);
+		margin-left: auto;
+		margin-right: auto;
+		@include media-breakpoint-up(lg) {
+			flex-direction: column;
+			padding: 0 rem(25) rem(25) rem(25);
+		}
+		&::after {
+			@include media-breakpoint-down(lg) {
+				content: none;
+			}
+		}
+		&.white-bg {
+			@include media-breakpoint-up(lg) {
+				background-color: $white;
+			}
 			p {
-				color: $body-color;
+				@include media-breakpoint-up(lg) {
+					color: $body-color;
+				}
 			}
 		}
 		p {
@@ -131,30 +154,41 @@
 	&__icon-wrap {
 		position: relative;
 		display: inline-block;
-		padding: rem(16);
-		background-color: $primary;
-		margin-top: rem(-8);
-		margin-bottom: rem(24);
-		border-radius: 0 0 14px 14px;
+		padding-right: rem(24);
+		@include media-breakpoint-up(lg) {
+			padding: rem(16);
+			background-color: $primary;
+			margin-top: rem(-8);
+			margin-bottom: rem(24);
+			border-radius: 0 0 14px 14px;
+		}
 		&::after {
-			content: "";
-			position: absolute;
-			left: calc(100% - 5px);
-			top: 0;
-			width: rem(8);
-			height: rem(8);
-			transform: skewX(35deg);
-			background-color: #c79528;
-			z-index: -1;
+			@include media-breakpoint-up(lg) {
+				content: "";
+				position: absolute;
+				left: calc(100% - 5px);
+				top: 0;
+				width: rem(8);
+				height: rem(8);
+				transform: skewX(35deg);
+				background-color: #c79528;
+				z-index: -1;
+			}
 		}
 		.icon {
 			font-size: rem(32);
-			color: $secondary;
+			color: $white;
+			@include media-breakpoint-up(lg) {
+				color: $secondary;
+			}
 		}
 	}
 	.form-wrap {
 		padding: rem(16) rem(16) rem(22);
 		border-radius: 16px;
+		max-width: rem(565);
+		margin-left: auto;
+		margin-right: auto;
 		@include media-breakpoint-up(sm) {
 			padding: rem(16) rem(24) rem(32);
 		}
