--- a/sourse/pug/blocks/sReviews/_sReviews.scss
+++ b/sourse/pug/blocks/sReviews/_sReviews.scss
@@ -104,18 +104,18 @@
 			object-fit: cover;
 			object-position: left bottom;
 		}
-		audio {
-			width: 100%;
-			height: rem(43);
+		.plyr--audio {
 			margin-bottom: rem(10);
 		}
 	}
 	h4 {
 		font-weight: 500;
 		line-height: 115%;
-		max-width: 13em;
 		flex-grow: 1;
 		margin-bottom: rem(20);
+		@include media-breakpoint-up(xl) {
+			max-width: 13em;
+		}
 	}
 	&__subtitle {
 		font-weight: 500;
