--- a/sourse/pug/blocks/sPriceList/_sPriceList.scss
+++ b/sourse/pug/blocks/sPriceList/_sPriceList.scss
@@ -160,7 +160,7 @@
 					&:first-child {
 						color: $body-color;
 						span {
-							color: #6c717a;
+							opacity: 0.7;
 						}
 					}
 					&:last-child {
