--- a/sourse/pug/blocks/mixin-wrap/components/pugination.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/pugination.pug
@@ -48,3 +48,22 @@ mixin pugin()
 			+li()
 				a.next.page-numbers(href='#')
 					img(src="img/svg/next-double.svg", alt="")
+
+mixin pugin2()
+	.pagination-wrapper
+		ul.page-numbers
+			mixin li(n)
+				li
+					if n
+						a.page-numbers(href='#')= n 
+					else
+						block
+			+li()
+				span.prev.page-numbers( )
+					img(src="img/svg/prev.svg", alt="")
+			+li()
+			- for (var x = 1; x < 6; x++)
+				+li(x)
+			+li()
+				a.next.page-numbers(href='#')
+					img(src="img/svg/next.svg", alt="")
