--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -114,3 +114,43 @@
 		}
 	}
 }
+
+.page-head {
+	padding-top: rem(35);
+	padding-bottom: rem(35);
+	@include media-breakpoint-up(md) {
+		padding-top: rem(40);
+		padding-bottom: rem(40);
+	}
+	@include media-breakpoint-up(lg) {
+		padding-top: rem(70);
+	}
+	a {
+		color: $secondary;
+		margin-bottom: rem(25);
+		display: inline-block;
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(35);
+		}
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(45);
+		}
+		svg {
+			font-size: rem(16);
+		}
+		&:hover {
+			color: $primary;
+		}
+	}
+	h1 {
+		margin-bottom: 0;
+	}
+}
+
+.portfolio-page {
+	.page-head {
+		@include media-breakpoint-up(lg) {
+			padding-bottom: rem(88);
+		}
+	}
+}
