--- a/sourse/pug/blocks/sPriceList/_sPriceList.scss
+++ b/sourse/pug/blocks/sPriceList/_sPriceList.scss
@@ -11,6 +11,11 @@
 		--sPB: #{rem(100)};
 		--sTPB: #{rem(48)};
 	}
+	h2 {
+		max-width: 18em;
+		margin-left: auto;
+		margin-right: auto;
+	}
 	h3 {
 		text-align: center;
 		margin-top: rem(44);
