--- a/sourse/pug/blocks/sTypical/_sTypical.scss
+++ b/sourse/pug/blocks/sTypical/_sTypical.scss
@@ -1,14 +1,108 @@
 // start .sTypical
 .sTypical {
-		// --sPT: ;
-		// --sPB: ;
-		// --sTPB: ;
-
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	// --sPT: ;
+	// --sPB: ;
+	// --sTPB: ;
+	h2 {
+		max-width: 18em;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	&__filter {
+		.row {
+			--bs-gutter-x: #{rem(8)};
+			--bs-gutter-y: var(--bs-gutter-x);
+			justify-content: center;
+			@include media-breakpoint-up(lg) {
+				justify-content: flex-start;
+			}
+		}
+		p {
+			font-weight: bold;
+			font-size: rem(14);
+			line-height: 145%;
+			text-align: center;
+			color: #000000;
+			margin-bottom: 0;
+			margin-bottom: rem(12);
+			@include media-breakpoint-up(md) {
+				font-size: 16px;
+			}
+			@include media-breakpoint-up(lg) {
+				margin-bottom: 0;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: rem(36);
+			}
+			@include media-breakpoint-up(xl) {
+				height: rem(40);
+			}
+		}
+		label.btn {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: rem(32);
+			width: 100%;
+			box-shadow: none !important;
+			border-radius: 10px;
+			padding: 6.5px;
+			font-weight: 400;
+			font-size: rem(12);
+			line-height: 115%;
+			@include media-breakpoint-up(md) {
+				height: rem(36);
+			}
+			@include media-breakpoint-up(xl) {
+				height: rem(40);
+			}
+			span {
+				white-space: nowrap;
+				@include media-breakpoint-up(sm) {
+					font-weight: 500;
+				}
+				&:first-child {
+					@include media-breakpoint-up(md) {
+						display: none;
+					}
+				}
+				&:last-child {
+					display: none;
+					@include media-breakpoint-up(md) {
+						display: block;
+					}
+				}
+			}
+		}
+		input.btn-check {
+			&:not(:checked) + label.btn {
+				@extend .btn-info;
+			}
+			&:checked {
+				+ label.btn {
+					@extend .btn-primary;
+				}
+			}
+		}
+	}
+	&__btn-col {
+		width: 100%;
+		max-width: calc(100% / 7);
+		flex: 1 0 calc(100% / 7);
+	}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sTypical
