--- a/sourse/pug/blocks/sTypical/_sTypical.scss
+++ b/sourse/pug/blocks/sTypical/_sTypical.scss
@@ -9,6 +9,10 @@
 		margin-right: auto;
 	}
 	&__filter {
+		margin-bottom: rem(32);
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(48);
+		}
 		.row {
 			--bs-gutter-x: #{rem(8)};
 			--bs-gutter-y: var(--bs-gutter-x);
@@ -90,6 +94,69 @@
 		width: 100%;
 		max-width: calc(100% / 7);
 		flex: 1 0 calc(100% / 7);
+	}
+	&__slider-wrapper {
+		position: relative;
+	}
+	&__item {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		max-width: rem(330);
+		margin-left: auto;
+		margin-right: auto;
+		picture {
+			@include block(280, 220);
+			width: 100%;
+			border: 0.62963px solid #e0e0e0;
+			border-radius: 12.5926px;
+			overflow: hidden;
+			margin-bottom: rem(20);
+			img {
+				position: absolute;
+				left: 0;
+				top: 0;
+			}
+		}
+		table {
+			width: 100%;
+			margin-bottom: rem(12);
+			tr {
+				td,
+				th {
+					padding-bottom: rem(12);
+					&:last-child {
+						text-align: right;
+					}
+				}
+				th {
+					font-size: rem(16);
+					line-height: 105%;
+					@include media-breakpoint-up(sm) {
+						font-size: rem(18);
+					}
+				}
+				td {
+					border-bottom: 1px solid $info;
+					font-size: rem(12);
+					line-height: 115%;
+					padding: rem(8) 0;
+				}
+				&:last-child {
+					td {
+						border: none;
+					}
+				}
+			}
+		}
+	}
+	&__btn {
+		@extend .btn, .btn-primary, .btn-sm;
+		&:after {
+			content: "";
+			@include a-cent;
+		}
 	}
 	@include media-breakpoint-up(xl) {
 	}
