--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -18,6 +18,12 @@
 	&__slider-wrapper {
 		position: relative;
 		--btnRatio: calc(270 / 384);
+		max-width: rem(385);
+		margin-left: auto;
+		margin-right: auto;
+		@include media-breakpoint-up(md) {
+			max-width: 100%;
+		}
 		.swiper-button-hand {
 			margin: 0;
 			top: calc(100% * var(--btnRatio) / 2);
