--- a/sourse/pug/blocks/sCertificates/_sCertificates.scss
+++ b/sourse/pug/blocks/sCertificates/_sCertificates.scss
@@ -16,6 +16,12 @@
 	}
 	&__slider-wrapper {
 		position: relative;
+		max-width: rem(385);
+		margin-left: auto;
+		margin-right: auto;
+		@include media-breakpoint-up(md) {
+			max-width: 100%;
+		}
 	}
 	&__slider {
 		padding: rem(16);
@@ -31,7 +37,7 @@
 	&__item {
 		padding: rem(24) rem(24) rem(28);
 		background-color: $white;
-		max-width: rem(336);
+		max-width: rem(365);
 		margin-left: auto;
 		margin-right: auto;
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
