--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -27,7 +27,7 @@ block pagecontent
 	//- +mob-mnu()
 	+header()
 	+top-nav()
-	//- +topLine()
+	+topLine()
 	+headerBlock()
 	+sCatalog()
 	.section-wrapper
