--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -1,9 +1,20 @@
 mixin topLine()
 	// start topLine
-	+b.SECTION.topLine.section#topLine&attributes(attributes)
+	+b.topLine.section#topLine&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 topLine
-				
-			.row
+			+e.main-row.row
+				.col-auto
+					+e.logo(href="/")
+						img(src="img/svg/logo-top.svg", alt="")
+				.col
+					.row
+						.col
+							span dropdown
+						.col-auto
+							+e.schedule
+								span открыто
+								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
+						.col-auto
+							+e.label 
+								span Работаем с&nbsp;2012 года
 	// end topLine
