--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -5,7 +5,8 @@ mixin topLine()
 			+e.main-row.row
 				.col-auto
 					+e.logo(href="/")
-						img(src="img/svg/logo-top.svg", alt="")
+						+icon('logo-top')
+						//- img(src="img/svg/logo-top.svg", alt="")
 				.col
 					.row
 						.col
