--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -47,6 +47,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-logo-top {
+	font-size:math.div(40,10)*1rem;
+	width: math.div(103,40)*1em;
+}
 .icon-person {
 	font-size:math.div(25,10)*1rem;
 	width: math.div(25,25)*1em;
